Fix login button alignment on mobile

--- a/src/Login/Login.scss
+++ b/src/Login/Login.scss
@@ -86,3 +86,12 @@
 .alert {
     margin-top: 1rem;
 }
+.btn-back {
+    width: 100% !important;
+}
+.back-container {
+    margin: auto;
+    width: 84%;
+    padding: 10px 20px;
+    align-self: center;
+}
